<resources>
    <string name="app_name">FamilyServerClient</string>
    <string name="host_placeholder">Enter an IP address</string>
    <string name="port_placeholder">Enter a port number</string>
    <string name="username_placeholder">Enter your username</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="firstname_placeholder">Enter your first name</string>
    <string name="lastname_placeholder">Enter your last name</string>
    <string name="email_placeholder">Enter your email</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_event">EventActivity</string>
</resources>
